# SPDX-License-Identifier: GPL-2.0-or-later
option(
  'nvme',
  type: 'feature',
  value: 'enabled',
  description: 'Build nvme executable'
)
option(
  'libnvme',
  type: 'feature',
  value: 'enabled',
  description: 'Build libnvme library'
)
option(
  'python',
  type : 'feature',
  value: 'auto',
  description : 'Generate libnvme python bindings'
)
option(
  'docs',
  type : 'combo',
  choices : ['false', 'html', 'man', 'rst', 'all'],
  description : 'install documentation'
)
option(
  'docs-build',
  type : 'boolean',
  value : false,
  description : 'build documentation'
)
option(
  'dracutrulesdir',
  type : 'string',
  value : 'lib/dracut/dracut.conf.d/',
  description : 'directory for dracut rules files'
)
option(
  'htmldir',
  type : 'string',
  value : '',
  description : 'directory for HTML documentation'
)
option(
  'rstdir',
  type : 'string',
  value : '',
  description : 'directory for ReST documentation'
 )
option(
  'json-c',
  type: 'feature',
  value: 'auto',
  description: 'JSON suppport'
)
option(
  'nvme-tests',
  type : 'boolean',
  value : false,
  description: 'Run tests against real hardware'
)
option(
  'tests',
  type : 'boolean',
  value : true,
  description : 'build tests'
)
option(
  'pdc-enabled',
  type: 'boolean',
  value : false,
  description : 'set default Persistent Discovery Controllers behavior'
)
option(
  'rundir',
  type: 'string',
  value: 'run',
  description: 'directory for volatile configuration files',
)
option(
  'systemctl',
  type : 'string',
  value : '/usr/bin/systemctl',
  description : 'path to systemctl binary'
)
option(
  'systemddir',
  type : 'string',
  value : 'lib/systemd/system',
  description : 'directory for systemd files'
)
option(
  'udevrulesdir',
  type : 'string',
  value : 'lib/udev/rules.d',
  description : 'directory for udev rules files'
)
option(
  'version-tag',
  type : 'string',
  description : 'override the git version string'
)
option(
  'examples',
  type : 'boolean',
  value : true,
  description : 'build examples'
)
option(
  'openssl',
  type : 'feature',
  value: 'auto',
  description : 'OpenSSL support'
)
option(
  'libdbus',
  type : 'feature',
  value: 'disabled',
  description : 'libdbus support'
)
option(
  'keyutils',
  type: 'feature',
  value: 'auto',
  description: 'keyutils support'
)
option(
  'liburing',
  type : 'feature',
  value: 'disabled',
  description : 'liburing support'
)
