# SPDX-License-Identifier: LGPL-2.1-or-later
[build-system]
requires = ["mesonpep517", "wheel", "meson==0.61.2", "ninja"] # PEP 508 specifications.
build-backend = "mesonpep517.buildapi"

[tool.mesonpep517.metadata]
author="Hannes Reinecke"
author-email="hare@suse.de"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description-file="README.md"
home-page = "https://github.com/linux-nvme/libnvme"
license="LGPL-2.1-or-later"
requires-python=">=3.6"
summary="python bindings for libnvme"

